--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Стартовый шаблон для верстки",
   "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -17,7 +20,8 @@
   },
   "homepage": "https://github.com/Infinity-Kim/VFBuild#readme",
   "dependencies": {
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "vite": "^3.2.3"
   },
   "devDependencies": {
     "vite": "^3.2.3"
